# conda-portable

./: .gitignore  LICENSE  README.md  pyproject.toml
src/conda_portable/: cli.py  common_packages.yaml  transform.py
